<resources>
    <string name="app_name">Object Hunt</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>

    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="shr_error_password">Password must contain at least 8 characters.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>


    <string name="button_placeholder">--placeholder--</string>
    <string name="change_game_mode_text">Previous</string>
    <string name="game_mode_button_2_text">Outdoor</string>
    <string name="game_mode_button_3_text">Office</string>
    <string name="game_mode_button_4_text">Madness</string>
    <string name="game_over_play_text">Play Again</string>
    <string name="game_over_challenge_text">Challenge</string>
    <string name="game_over_Back_text">Main Menu</string>


    <string name="signin_other_error">Error at sign in</string>
    <string name="app_id">1031977838302</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="top_score_title">Top Scores</string>
    <string name="obj_found_dialog_title"><u>Yey you found it!</u></string>
    <string name="top_found_objects">Top found objects</string>
    <string name="guest_player">Guest Player</string>
    <string name="next_gamemode">Next</string>
    <string name="no_scores_were_found_play_some_games">No scores were found</string>
    <string name="no_objects_were_found">No objects were found</string>
    <string name="game_over">Game over</string>
    <string name="let_s_see_how_you_did_all_details_are_below">Let\'s see how you did.\n All details are below.</string>
    <string name="total_points">Total points:</string>
    <string name="_0">0</string>
    <string name="_0pts">0 pts</string>
    <string name="_0s">0 s</string>
    <string name="objects_found">Objects Found:</string>
    <string name="list_of_objects_found">List of objects found:</string>
    <string name="find">Find:</string>
    <string name="skip_image">Skip image</string>
    <string name="show_all">Show all</string>
    <string name="total_time_survived">Total time survived:</string>
    <string name="total_time_played">Total time played:</string>
    <string name="best_time">Best time:</string>
    <string name="monitor">Monitor</string>
    <string name="_0_pts">0 pts</string>

</resources>
