<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/touchInterceptor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pageBackground"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_line"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/guest_player"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.ObjHunt.Profile.Title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_time"
                    android:textColor="@color/darkGray"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextViewBestTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkGray"
                    android:layout_marginStart="2dp"
                    android:textSize="24sp"
                    android:text="@string/_0s"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_time_played"
                    android:textColor="@color/darkGray"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextViewTotalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkGray"
                    android:layout_marginStart="2dp"
                    android:textSize="24sp"
                    android:text="@string/_0s"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/top_score_title"
                android:textAppearance="@style/TextAppearance.ObjHunt.Profile.Simple.Dark.Text" />

            <TextView
                android:id="@+id/NoScoresTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_scores_were_found_play_some_games"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.ObjHunt.Profile.Simple.NoScore.Text" />

            <ListView
                android:id="@+id/topScores"
                style="@style/Widget.ObjHunt.ListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:background="@android:drawable/dialog_holo_light_frame" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dp"
                android:text="@string/top_found_objects"
                android:textAppearance="@style/TextAppearance.ObjHunt.Profile.Simple.Dark.Text" />

            <TextView
                android:id="@+id/NoObjectsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_objects_were_found"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.ObjHunt.Profile.Simple.NoScore.Text" />

            <ListView
                android:id="@+id/TopObjList"
                style="@style/Widget.ObjHunt.ListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/dialog_holo_light_frame" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>