<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".GameModeSelectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="90dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.ObjHunt.Title"
            android:layout_above="@id/game_mode_button_1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_mode_button_1"
            style="@style/Widget.ObjHunt.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:layout_above="@id/game_mode_button_2"
            android:text="@string/game_mode_button_1_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_mode_button_2"
            style="@style/Widget.ObjHunt.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:layout_above="@id/game_mode_button_3"
            android:text="@string/game_mode_button_2_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_mode_button_3"
            style="@style/Widget.ObjHunt.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:layout_above="@id/game_mode_button_4"
            android:text="@string/game_mode_button_3_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_mode_button_4"
            style="@style/Widget.ObjHunt.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:text="@string/game_mode_button_4_text" />

    </LinearLayout>
</ScrollView>