<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:minWidth="125dp"
        android:minHeight="125dp" />

    <RelativeLayout
        android:id="@+id/ldb_rel_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/game_mode_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.ObjHunt.Profile.Simple.Dark.Text" />

        <Button
            android:id="@+id/prev_game_mode"
            style="@style/Widget.ObjHunt.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/game_mode_title"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/change_game_mode_text"
            android:textSize="15sp" />

        <Button
            android:id="@+id/leader_button"
            style="@style/Widget.ObjHunt.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/game_mode_title"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/show_all"
            android:textSize="15sp" />

        <Button
            android:id="@+id/next_game_mode"
            style="@style/Widget.ObjHunt.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/game_mode_title"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/next_gamemode"
            android:textSize="15sp" />

        <ListView
            android:id="@+id/usersRank"
            style="@style/Widget.ObjHunt.ListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/prev_game_mode"
            android:background="@android:drawable/dialog_holo_light_frame" />

    </RelativeLayout>

</RelativeLayout>